test/spec_vectors/load64/fail/module_59.wat
(module (memory i64 1) (func $type-address-empty-in-store (i32.store (i32.load) (i32.const 1))))